Streaming Observation to python

--- a/Mod/HollowKnightAI.csproj
+++ b/Mod/HollowKnightAI.csproj
@@ -57,6 +57,8 @@
   <Target Condition="'$(Configuration)' == 'Debug'" Name="CopyMod" AfterTargets="PostBuildEvent">
     <RemoveDir Condition="Exists('$(ModsPath)/$(TargetName)')" Directories="$(ModsPath)/$(TargetName)" />
     <MakeDir Directories="$(ModsPath)/$(TargetName)" />
+    <!-- <Copy SourceFiles="$(TargetDir)/AsyncIO.dll" DestinationFolder="$(ModsPath)/$(TargetName)" /> -->
+    <Copy SourceFiles="$(TargetDir)/websocket-sharp.dll" DestinationFolder="$(ModsPath)/$(TargetName)" />
     <Copy SourceFiles="$(TargetPath);$(TargetDir)/$(TargetName).pdb" DestinationFolder="$(ModsPath)/$(TargetName)" />
     <!-- Uncomment this if you have the game installed on Steam, Steam is in your PATH environment variable, and you want to run the game upon build. -->
     <!-- Exec Command="steam steam://rungameid/367520" / -->
@@ -338,6 +340,6 @@
     <None Include="ReadMe.md" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="libtorch-cuda-11.3-win-x64" Version="1.11.0.1" />
+    <PackageReference Include="WebSocketSharp" Version="1.0.3-rc11" />
   </ItemGroup>
 </Project>
